--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 			}
 		</style>
 <script src="three.js/build/three.js"></script>
-<script src="dat-gui/build/dat.gui.js"></script>
+<script src="dat.gui/build/dat.gui.js"></script>
 <script src="stats.js/build/stats.min.js"></script>
 <script src="three.js/examples/js/controls/OrbitControls.js"></script>
 <script src="gui.js"></script>
