--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
 			depthFaces.add( mesh );
 		}
 		scene.add(depthFaces);
-		console.log(depthFaces);
+		console.log("faces="+depthFaces.children.length);
 	}
 	
 	function render() {
