--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
 	
 	function initFaces() {
 		if(depthFaces !=null) {
-			//scene.remove( depthFaces  );
+			scene.remove( depthFaces  );
 		}
 		depthFaces = new THREE.Object3D();
 		depthFaces.position.set(0,0,0);
