added adjecent property to depthVectors

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 	var scene, camera;
 	var lighting = new Object();
 	
-	var pointCloud, spherePointCloud,depthFaces;
+	var pointCloud, spherePointCloud,depthFaces,depthVectors;
 	var sphere;
 	var nScale =1;
 	
