--- a/index.html
+++ b/index.html
@@ -142,6 +142,14 @@
 		}
 	}
 	
+	function removeAllPointClouds() {
+		if(plates) {
+			for(i in plates) {
+				removePointCloud(plates[i].vectors);
+			}
+		}
+	}
+	
 	function initFaces() {
 		if(depthFaces !=null) {
 			scene.remove(depthFaces);
@@ -184,14 +192,11 @@
 	}
 	
 	function animateClouds() {
+		var i=0;
 		while(i<plates.length) {
 			plate = plates[i];
 			if(typeof plate!="undefined") {
-			
 				if(plates[i].animateExpand) {
-					expandPlate(plates[i]);
-					console.log(i);
-					console.log(typeof plate);
 					updateSpherePointCloud(plate.vectors,plate.color,plate.pointSize);
 				}
 			}
@@ -208,7 +213,6 @@
 	
 	window.addEventListener( 'resize', onWindowResize, false );
 	document.addEventListener("DOMContentLoaded", function(event) {
-	
 		init();
 		refresh();
 		animate();
