--- a/index.html
+++ b/index.html
@@ -42,6 +42,8 @@
 <script src="three.js/examples/js/controls/OrbitControls.js"></script>
 <script src="gui.js"></script>
 <script src="src/generate.js"></script>
+<script src="src/edges.js"></script>
+<script src="src/adjacent.js"></script>
 <script>
 	var container, stats;
 	var renderer;
